--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
+
+.App{
+  display: grid;
+  grid-template-columns:1fr ;
+  grid-template-rows: 1fr 4fr 1fr;
+  grid-template-areas: 
+  "header"
+  "section"
+  "footer";
+
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+header{
+  background-color: tomato;
+  border-bottom: 1px solid black;
+  grid-area:"header" ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+section{
+  background-color: #fb1 ;
+  grid-area:"section" ;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section div{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.formulaire{
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+.checked{
+  text-decoration: line-through;
+  text-decoration-color: red ;
+}
+
+form{
+  display:flex;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color:purple,;
+  height: 300px;
+  width:400px;
 }
 
-.App-link {
-  color: #61dafb;
+textarea{
+  height: 65px;
+  width: 548px;
+  background: #F2F7FD;
+  border: 1px solid #5C48D3;
+  box-sizing: border-box;
+  border-radius: 10px;
+  margin-right: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  width: 130px;
+  height: 65px;
+  background: #5C48D3;
+  border-radius: 10px;
+}
+
+.addTask{
+  height: 20px;
+  width: 20px;
+}
+
+
+footer{
+  background-color:yellowgreen ;
+  grid-area: "footer";
 }
